--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(/assets/img/dark-green.jpg);
+    background-image: url(./assets/img/dark-green.jpg);
     background-size: cover;
 }
 
